--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,7 @@
 <Application x:Class="SolusManifestApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:SolusManifestApp.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -9,6 +10,24 @@
                 <!-- Styles that use the theme colors -->
                 <ResourceDictionary Source="Resources/Styles/SteamTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <!-- Converters -->
+            <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
+            <converters:InverseNullToVisibilityConverter x:Key="InverseNullToVisibilityConverter"/>
+            <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+            <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter"/>
+            <converters:FileNameConverter x:Key="FileNameConverter"/>
+            <converters:FilePathConverter x:Key="FilePathConverter"/>
+            <converters:PageNameToTagConverter x:Key="PageNameToTagConverter"/>
+            <converters:DownloadStatusToVisibilityConverter x:Key="DownloadStatusToVisibilityConverter"/>
+            <converters:BytesToStringConverter x:Key="BytesToStringConverter"/>
+            <converters:ItemTypeToVisibilityConverter x:Key="ItemTypeToVisibilityConverter"/>
+            <converters:ImagePathConverter x:Key="ImagePathConverter"/>
+            <converters:BoolToViewIconConverter x:Key="BoolToViewIconConverter"/>
+            <converters:BoolToViewTextConverter x:Key="BoolToViewTextConverter"/>
+            <converters:EqualityConverter x:Key="EqualityConverter"/>
+            <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
