--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -243,13 +243,22 @@
                                 <TextBlock Text="Tools" FontSize="13"/>
                             </StackPanel>
                         </Button>
-                        
+
                         <Button Style="{StaticResource NavButtonStyle}"
                                 Command="{Binding NavigateToDataBackupCommand}"
                                 Tag="{Binding CurrentPageName, Converter={StaticResource PageNameToTagConverter}, ConverterParameter=DataBackup}">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="💾" FontSize="14" Margin="0,0,6,0"/>
                                 <TextBlock Text="Data Backup" FontSize="13"/>
+                            </StackPanel>
+                        </Button>
+
+                        <Button Style="{StaticResource NavButtonStyle}"
+                                Command="{Binding NavigateToFixInstallerCommand}"
+                                Tag="{Binding CurrentPageName, Converter={StaticResource PageNameToTagConverter}, ConverterParameter=FixInstaller}">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="🔨" FontSize="14" Margin="0,0,6,0"/>
+                                <TextBlock Text="Fix Installer" FontSize="13"/>
                             </StackPanel>
                         </Button>
 
