--- a/Resources/Themes/AmethystTheme.xaml
+++ b/Resources/Themes/AmethystTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Amethyst Theme -->
+    <Color x:Key="PrimaryDark">#1D132E</Color>
+    <Color x:Key="SecondaryDark">#30204D</Color>
+    <Color x:Key="CardBackground">#140C21</Color>
+    <Color x:Key="CardHover">#25183B</Color>
+    <Color x:Key="Accent">#9D4EDD</Color>
+    <Color x:Key="AccentHover">#B57AFF</Color>
+    <Color x:Key="TextPrimary">#F4EFFF</Color>
+    <Color x:Key="TextSecondary">#D9B8FF</Color>
+    <Color x:Key="BorderColor">#4F367A</Color>
+    <Color x:Key="Success">#3AFFB8</Color>
+    <Color x:Key="SuccessHover">#7AFFD7</Color>
+    <Color x:Key="Warning">#FFD60A</Color>
+    <Color x:Key="WarningHover">#FFE03E</Color>
+    <Color x:Key="Danger">#FF4D8B</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#9D4EDD" Offset="0"/>
+        <GradientStop Color="#7B2CBF" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
