--- a/Resources/Themes/AuroraTheme.xaml
+++ b/Resources/Themes/AuroraTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Aurora Theme -->
+    <Color x:Key="PrimaryDark">#071014</Color>
+    <Color x:Key="SecondaryDark">#0C1E24</Color>
+    <Color x:Key="CardBackground">#050B0E</Color>
+    <Color x:Key="CardHover">#0A161B</Color>
+    <Color x:Key="Accent">#02adc0</Color>
+    <Color x:Key="AccentHover">#01dbf4</Color>
+    <Color x:Key="TextPrimary">#E7FEFF</Color>
+    <Color x:Key="TextSecondary">#9CD4D8</Color>
+    <Color x:Key="BorderColor">#1E4B53</Color>
+    <Color x:Key="Success">#2EE59D</Color>
+    <Color x:Key="SuccessHover">#5EF0B7</Color>
+    <Color x:Key="Warning">#FFC857</Color>
+    <Color x:Key="WarningHover">#FFD98A</Color>
+    <Color x:Key="Danger">#FF4D6D</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#00E5FF" Offset="0"/>
+        <GradientStop Color="#2EE59D" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
