--- a/Resources/Themes/BubblegumPopTheme.xaml
+++ b/Resources/Themes/BubblegumPopTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Bubblegum Pop Theme -->
+    <Color x:Key="PrimaryDark">#1A142E</Color>
+    <Color x:Key="SecondaryDark">#2C214D</Color>
+    <Color x:Key="CardBackground">#110D20</Color>
+    <Color x:Key="CardHover">#21183B</Color>
+    <Color x:Key="Accent">#FF69B4</Color>
+    <Color x:Key="AccentHover">#FF8AC7</Color>
+    <Color x:Key="TextPrimary">#FFF0F5</Color>
+    <Color x:Key="TextSecondary">#FFC1E0</Color>
+    <Color x:Key="BorderColor">#48367A</Color>
+    <Color x:Key="Success">#00F5D4</Color>
+    <Color x:Key="SuccessHover">#5BFFEB</Color>
+    <Color x:Key="Warning">#FFEE00</Color>
+    <Color x:Key="WarningHover">#FFF35C</Color>
+    <Color x:Key="Danger">#FF3A8F</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#FF69B4" Offset="0"/>
+        <GradientStop Color="#00F5D4" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
