--- a/Resources/Themes/CoffeeHouseTheme.xaml
+++ b/Resources/Themes/CoffeeHouseTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Coffee House Theme -->
+    <Color x:Key="PrimaryDark">#2A211E</Color>
+    <Color x:Key="SecondaryDark">#40322D</Color>
+    <Color x:Key="CardBackground">#1F1814</Color>
+    <Color x:Key="CardHover">#312621</Color>
+    <Color x:Key="Accent">#A87B4F</Color>
+    <Color x:Key="AccentHover">#C49A6C</Color>
+    <Color x:Key="TextPrimary">#F5EBE0</Color>
+    <Color x:Key="TextSecondary">#D6C6B9</Color>
+    <Color x:Key="BorderColor">#5C4B44</Color>
+    <Color x:Key="Success">#7EBD80</Color>
+    <Color x:Key="SuccessHover">#98D29B</Color>
+    <Color x:Key="Warning">#EAC459</Color>
+    <Color x:Key="WarningHover">#F4D37A</Color>
+    <Color x:Key="Danger">#D97F74</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#A87B4F" Offset="0"/>
+        <GradientStop Color="#825C38" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
