--- a/Resources/Themes/DesertSandTheme.xaml
+++ b/Resources/Themes/DesertSandTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Desert Sand Theme -->
+    <Color x:Key="PrimaryDark">#1A1410</Color>
+    <Color x:Key="SecondaryDark">#2A2019</Color>
+    <Color x:Key="CardBackground">#120D0A</Color>
+    <Color x:Key="CardHover">#221A14</Color>
+    <Color x:Key="Accent">#D9A441</Color>
+    <Color x:Key="AccentHover">#E7BB63</Color>
+    <Color x:Key="TextPrimary">#FFF1DB</Color>
+    <Color x:Key="TextSecondary">#D7C1A2</Color>
+    <Color x:Key="BorderColor">#5A4634</Color>
+    <Color x:Key="Success">#7CB342</Color>
+    <Color x:Key="SuccessHover">#9CCC65</Color>
+    <Color x:Key="Warning">#FFB300</Color>
+    <Color x:Key="WarningHover">#FFCA28</Color>
+    <Color x:Key="Danger">#E05A3F</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#D9A441" Offset="0"/>
+        <GradientStop Color="#B97917" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
