--- a/Resources/Themes/DraculaTheme.xaml
+++ b/Resources/Themes/DraculaTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Dracula Theme -->
+    <Color x:Key="PrimaryDark">#0F1021</Color>
+    <Color x:Key="SecondaryDark">#1B1B36</Color>
+    <Color x:Key="CardBackground">#0B0C18</Color>
+    <Color x:Key="CardHover">#14152B</Color>
+    <Color x:Key="Accent">#FF79C6</Color>
+    <Color x:Key="AccentHover">#FF98D4</Color>
+    <Color x:Key="TextPrimary">#F8F8F2</Color>
+    <Color x:Key="TextSecondary">#B8B8D0</Color>
+    <Color x:Key="BorderColor">#3A3A64</Color>
+    <Color x:Key="Success">#50FA7B</Color>
+    <Color x:Key="SuccessHover">#7CFF9A</Color>
+    <Color x:Key="Warning">#F1FA8C</Color>
+    <Color x:Key="WarningHover">#F6FFB0</Color>
+    <Color x:Key="Danger">#FF5555</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#FF79C6" Offset="0"/>
+        <GradientStop Color="#BD93F9" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
