--- a/Resources/Themes/EmeraldIsleTheme.xaml
+++ b/Resources/Themes/EmeraldIsleTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Emerald Isle Theme -->
+    <Color x:Key="PrimaryDark">#0A1D12</Color>
+    <Color x:Key="SecondaryDark">#133824</Color>
+    <Color x:Key="CardBackground">#06130B</Color>
+    <Color x:Key="CardHover">#0F291A</Color>
+    <Color x:Key="Accent">#00C27E</Color>
+    <Color x:Key="AccentHover">#00E696</Color>
+    <Color x:Key="TextPrimary">#E0FFF2</Color>
+    <Color x:Key="TextSecondary">#99E6C9</Color>
+    <Color x:Key="BorderColor">#205E3D</Color>
+    <Color x:Key="Success">#A1FFD4</Color>
+    <Color x:Key="SuccessHover">#C0FFE9</Color>
+    <Color x:Key="Warning">#FFD700</Color>
+    <Color x:Key="WarningHover">#FFE033</Color>
+    <Color x:Key="Danger">#FF5959</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#00C27E" Offset="0"/>
+        <GradientStop Color="#A1FFD4" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
