--- a/Resources/Themes/EspressoTheme.xaml
+++ b/Resources/Themes/EspressoTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Espresso Theme -->
+    <Color x:Key="PrimaryDark">#120C0A</Color>
+    <Color x:Key="SecondaryDark">#231814</Color>
+    <Color x:Key="CardBackground">#0C0806</Color>
+    <Color x:Key="CardHover">#1A120F</Color>
+    <Color x:Key="Accent">#C58B5A</Color>
+    <Color x:Key="AccentHover">#D8A67B</Color>
+    <Color x:Key="TextPrimary">#F3E9E2</Color>
+    <Color x:Key="TextSecondary">#CBB8AC</Color>
+    <Color x:Key="BorderColor">#4A362D</Color>
+    <Color x:Key="Success">#6FBF73</Color>
+    <Color x:Key="SuccessHover">#88D28C</Color>
+    <Color x:Key="Warning">#E6B566</Color>
+    <Color x:Key="WarningHover">#F0CB8C</Color>
+    <Color x:Key="Danger">#D96C5F</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#C58B5A" Offset="0"/>
+        <GradientStop Color="#8D5A3C" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
