--- a/Resources/Themes/GlacierTheme.xaml
+++ b/Resources/Themes/GlacierTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Glacier Theme -->
+    <Color x:Key="PrimaryDark">#06101A</Color>
+    <Color x:Key="SecondaryDark">#0B1F2E</Color>
+    <Color x:Key="CardBackground">#040A12</Color>
+    <Color x:Key="CardHover">#071522</Color>
+    <Color x:Key="Accent">#3FA9F5</Color>
+    <Color x:Key="AccentHover">#67BDF7</Color>
+    <Color x:Key="TextPrimary">#EAF6FF</Color>
+    <Color x:Key="TextSecondary">#A8C8DD</Color>
+    <Color x:Key="BorderColor">#2B4D63</Color>
+    <Color x:Key="Success">#3DDC97</Color>
+    <Color x:Key="SuccessHover">#66E6B0</Color>
+    <Color x:Key="Warning">#FFD166</Color>
+    <Color x:Key="WarningHover">#FFE09A</Color>
+    <Color x:Key="Danger">#FF5C77</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#3FA9F5" Offset="0"/>
+        <GradientStop Color="#2ED1FF" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
