--- a/Resources/Themes/GrapeTheme.xaml
+++ b/Resources/Themes/GrapeTheme.xaml
@@ -10,8 +10,11 @@
     <Color x:Key="AccentHover">#9c27b0</Color>
     <Color x:Key="TextPrimary">#f3e5f5</Color>
     <Color x:Key="TextSecondary">#ce93d8</Color>
+    <Color x:Key="BorderColor">#6d3f8c</Color>
     <Color x:Key="Success">#66bb6a</Color>
+    <Color x:Key="SuccessHover">#81c784</Color>
     <Color x:Key="Warning">#ffa726</Color>
+    <Color x:Key="WarningHover">#ffb74d</Color>
     <Color x:Key="Danger">#ef5350</Color>
 
     <!-- Solid Color Brushes -->
@@ -24,8 +27,11 @@
     <SolidColorBrush x:Key="TextPrimaryBrush" Color="{StaticResource TextPrimary}"/>
     <SolidColorBrush x:Key="TextSecondaryBrush" Color="{StaticResource TextSecondary}"/>
     <SolidColorBrush x:Key="SuccessBrush" Color="{StaticResource Success}"/>
+    <SolidColorBrush x:Key="SuccessHoverBrush" Color="{StaticResource SuccessHover}"/>
     <SolidColorBrush x:Key="WarningBrush" Color="{StaticResource Warning}"/>
+    <SolidColorBrush x:Key="WarningHoverBrush" Color="{StaticResource WarningHover}"/>
     <SolidColorBrush x:Key="DangerBrush" Color="{StaticResource Danger}"/>
+    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderColor}"/>
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
