--- a/Resources/Themes/MatrixTheme.xaml
+++ b/Resources/Themes/MatrixTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Matrix Theme -->
+    <Color x:Key="PrimaryDark">#0d1b0d</Color>
+    <Color x:Key="SecondaryDark">#1a2e1a</Color>
+    <Color x:Key="CardBackground">#050a05</Color>
+    <Color x:Key="CardHover">#0f1f0f</Color>
+    <Color x:Key="Accent">#01d536</Color>
+    <Color x:Key="AccentHover">#09fb45</Color>
+    <Color x:Key="TextPrimary">#019325</Color>
+    <Color x:Key="TextSecondary">#008f11</Color>
+    <Color x:Key="BorderColor">#1f3f1f</Color>
+    <Color x:Key="Success">#39ff14</Color>
+    <Color x:Key="SuccessHover">#50ff35</Color>
+    <Color x:Key="Warning">#ffff00</Color>
+    <Color x:Key="WarningHover">#ffff33</Color>
+    <Color x:Key="Danger">#ff0000</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#00ff41" Offset="0"/>
+        <GradientStop Color="#008f11" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
