--- a/Resources/Themes/MidnightTheme.xaml
+++ b/Resources/Themes/MidnightTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Midnight Theme -->
+    <Color x:Key="PrimaryDark">#0d1b2a</Color>
+    <Color x:Key="SecondaryDark">#1b263b</Color>
+    <Color x:Key="CardBackground">#050a14</Color>
+    <Color x:Key="CardHover">#151f2e</Color>
+    <Color x:Key="Accent">#7209b7</Color>
+    <Color x:Key="AccentHover">#560bad</Color>
+    <Color x:Key="TextPrimary">#e0e1dd</Color>
+    <Color x:Key="TextSecondary">#9d9ca3</Color>
+    <Color x:Key="BorderColor">#415a77</Color>
+    <Color x:Key="Success">#4cc9f0</Color>
+    <Color x:Key="SuccessHover">#5ed4f6</Color>
+    <Color x:Key="Warning">#f72585</Color>
+    <Color x:Key="WarningHover">#fb3c9a</Color>
+    <Color x:Key="Danger">#e63946</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#7209b7" Offset="0"/>
+        <GradientStop Color="#560bad" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
