--- a/Resources/Themes/NordTheme.xaml
+++ b/Resources/Themes/NordTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Nord Theme -->
+    <Color x:Key="PrimaryDark">#2E3440</Color>
+    <Color x:Key="SecondaryDark">#3B4252</Color>
+    <Color x:Key="CardBackground">#242A35</Color>
+    <Color x:Key="CardHover">#2B3240</Color>
+    <Color x:Key="Accent">#88C0D0</Color>
+    <Color x:Key="AccentHover">#9AD7E9</Color>
+    <Color x:Key="TextPrimary">#ECEFF4</Color>
+    <Color x:Key="TextSecondary">#B7C0CE</Color>
+    <Color x:Key="BorderColor">#4C566A</Color>
+    <Color x:Key="Success">#A3BE8C</Color>
+    <Color x:Key="SuccessHover">#B6D29A</Color>
+    <Color x:Key="Warning">#EBCB8B</Color>
+    <Color x:Key="WarningHover">#F2D9A6</Color>
+    <Color x:Key="Danger">#BF616A</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#88C0D0" Offset="0"/>
+        <GradientStop Color="#5E81AC" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
