--- a/Resources/Themes/Ocean2Theme.xaml
+++ b/Resources/Themes/Ocean2Theme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Ocean2 Theme -->
+    <Color x:Key="PrimaryDark">#071A2B</Color>
+    <Color x:Key="SecondaryDark">#0C2D48</Color>
+    <Color x:Key="CardBackground">#05121F</Color>
+    <Color x:Key="CardHover">#0A2236</Color>
+    <Color x:Key="Accent">#00B5D8</Color>
+    <Color x:Key="AccentHover">#18C7E8</Color>
+    <Color x:Key="TextPrimary">#D6F3FF</Color>
+    <Color x:Key="TextSecondary">#86BFD1</Color>
+    <Color x:Key="BorderColor">#1F4D66</Color>
+    <Color x:Key="Success">#2ECC71</Color>
+    <Color x:Key="SuccessHover">#47D885</Color>
+    <Color x:Key="Warning">#F4B400</Color>
+    <Color x:Key="WarningHover">#F7C33A</Color>
+    <Color x:Key="Danger">#E74C3C</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#00B5D8" Offset="0"/>
+        <GradientStop Color="#007EA7" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
