--- a/Resources/Themes/OceanTheme.xaml
+++ b/Resources/Themes/OceanTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Ocean Theme -->
+    <Color x:Key="PrimaryDark">#0a1929</Color>
+    <Color x:Key="SecondaryDark">#1e3a5f</Color>
+    <Color x:Key="CardBackground">#051121</Color>
+    <Color x:Key="CardHover">#132438</Color>
+    <Color x:Key="Accent">#00b4d8</Color>
+    <Color x:Key="AccentHover">#0096c7</Color>
+    <Color x:Key="TextPrimary">#caf0f8</Color>
+    <Color x:Key="TextSecondary">#90e0ef</Color>
+    <Color x:Key="BorderColor">#03045e</Color>
+    <Color x:Key="Success">#06d6a0</Color>
+    <Color x:Key="SuccessHover">#1be7b1</Color>
+    <Color x:Key="Warning">#ffd60a</Color>
+    <Color x:Key="WarningHover">#ffe135</Color>
+    <Color x:Key="Danger">#ef476f</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#00b4d8" Offset="0"/>
+        <GradientStop Color="#0096c7" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
