--- a/Resources/Themes/PaperTheme.xaml
+++ b/Resources/Themes/PaperTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Paper Theme -->
+    <Color x:Key="PrimaryDark">#F6F1E8</Color>
+    <Color x:Key="SecondaryDark">#EEE6DA</Color>
+    <Color x:Key="CardBackground">#FFFFFF</Color>
+    <Color x:Key="CardHover">#F3EEE6</Color>
+    <Color x:Key="Accent">#2E6F9E</Color>
+    <Color x:Key="AccentHover">#3C86BA</Color>
+    <Color x:Key="TextPrimary">#1C232B</Color>
+    <Color x:Key="TextSecondary">#54616C</Color>
+    <Color x:Key="BorderColor">#D7CCBE</Color>
+    <Color x:Key="Success">#2E7D32</Color>
+    <Color x:Key="SuccessHover">#3D9441</Color>
+    <Color x:Key="Warning">#B7791F</Color>
+    <Color x:Key="WarningHover">#C98E33</Color>
+    <Color x:Key="Danger">#C62828</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#2E6F9E" Offset="0"/>
+        <GradientStop Color="#4CB3A3" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
