--- a/Resources/Themes/RubyRedTheme.xaml
+++ b/Resources/Themes/RubyRedTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Ruby Red Theme -->
+    <Color x:Key="PrimaryDark">#230C0F</Color>
+    <Color x:Key="SecondaryDark">#3B151A</Color>
+    <Color x:Key="CardBackground">#1A080A</Color>
+    <Color x:Key="CardHover">#2C1014</Color>
+    <Color x:Key="Accent">#E01A4F</Color>
+    <Color x:Key="AccentHover">#F73A6F</Color>
+    <Color x:Key="TextPrimary">#FFE3E9</Color>
+    <Color x:Key="TextSecondary">#FFB0C2</Color>
+    <Color x:Key="BorderColor">#642631</Color>
+    <Color x:Key="Success">#3AFF8A</Color>
+    <Color x:Key="SuccessHover">#7AFFB2</Color>
+    <Color x:Key="Warning">#FFC700</Color>
+    <Color x:Key="WarningHover">#FFD43B</Color>
+    <Color x:Key="Danger">#FF3D3D</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#E01A4F" Offset="0"/>
+        <GradientStop Color="#A31438" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
