--- a/Resources/Themes/RusticTheme.xaml
+++ b/Resources/Themes/RusticTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Rustic Theme -->
+    <Color x:Key="PrimaryDark">#3B2E26</Color>
+    <Color x:Key="SecondaryDark">#5C473D</Color>
+    <Color x:Key="CardBackground">#2E221B</Color>
+    <Color x:Key="CardHover">#473A31</Color>
+    <Color x:Key="Accent">#D98A41</Color>
+    <Color x:Key="AccentHover">#E7A263</Color>
+    <Color x:Key="TextPrimary">#FFF5E1</Color>
+    <Color x:Key="TextSecondary">#D7C8A2</Color>
+    <Color x:Key="BorderColor">#7A6254</Color>
+    <Color x:Key="Success">#7CB342</Color>
+    <Color x:Key="SuccessHover">#9CCC65</Color>
+    <Color x:Key="Warning">#FFB300</Color>
+    <Color x:Key="WarningHover">#FFCA28</Color>
+    <Color x:Key="Danger">#E06A4F</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#D98A41" Offset="0"/>
+        <GradientStop Color="#B96917" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
