--- a/Resources/Themes/SolarTheme.xaml
+++ b/Resources/Themes/SolarTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Solar Theme -->
+    <Color x:Key="PrimaryDark">#1A1208</Color>
+    <Color x:Key="SecondaryDark">#2B1D10</Color>
+    <Color x:Key="CardBackground">#120C06</Color>
+    <Color x:Key="CardHover">#22160B</Color>
+    <Color x:Key="Accent">#FF9800</Color>
+    <Color x:Key="AccentHover">#FFB74D</Color>
+    <Color x:Key="TextPrimary">#FFF3E0</Color>
+    <Color x:Key="TextSecondary">#E0B88A</Color>
+    <Color x:Key="BorderColor">#5A3A1D</Color>
+    <Color x:Key="Success">#7CB342</Color>
+    <Color x:Key="SuccessHover">#9CCC65</Color>
+    <Color x:Key="Warning">#FFC107</Color>
+    <Color x:Key="WarningHover">#FFD54F</Color>
+    <Color x:Key="Danger">#F4511E</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#FF9800" Offset="0"/>
+        <GradientStop Color="#F57C00" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
