--- a/Resources/Themes/SynthwaveTheme.xaml
+++ b/Resources/Themes/SynthwaveTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Synthwave Theme -->
+    <Color x:Key="PrimaryDark">#1A0B2E</Color>
+    <Color x:Key="SecondaryDark">#29134A</Color>
+    <Color x:Key="CardBackground">#0F061F</Color>
+    <Color x:Key="CardHover">#1F0E3A</Color>
+    <Color x:Key="Accent">#F900FF</Color>
+    <Color x:Key="AccentHover">#FF3BFF</Color>
+    <Color x:Key="TextPrimary">#00E5FF</Color>
+    <Color x:Key="TextSecondary">#C655FF</Color>
+    <Color x:Key="BorderColor">#4A238A</Color>
+    <Color x:Key="Success">#00FF41</Color>
+    <Color x:Key="SuccessHover">#55FF81</Color>
+    <Color x:Key="Warning">#FFD600</Color>
+    <Color x:Key="WarningHover">#FFE03B</Color>
+    <Color x:Key="Danger">#FF0054</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#F900FF" Offset="0"/>
+        <GradientStop Color="#00E5FF" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
