--- a/Resources/Themes/ToxicSlimeTheme.xaml
+++ b/Resources/Themes/ToxicSlimeTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Toxic Slime Theme -->
+    <Color x:Key="PrimaryDark">#050806</Color>
+    <Color x:Key="SecondaryDark">#0B120D</Color>
+    <Color x:Key="CardBackground">#030503</Color>
+    <Color x:Key="CardHover">#08110A</Color>
+    <Color x:Key="Accent">#80a60c</Color>
+    <Color x:Key="AccentHover">#85cc00</Color>
+    <Color x:Key="TextPrimary">#E9FFE0</Color>
+    <Color x:Key="TextSecondary">#9EDC8A</Color>
+    <Color x:Key="BorderColor">#26412C</Color>
+    <Color x:Key="Success">#35FF7A</Color>
+    <Color x:Key="SuccessHover">#6CFF9D</Color>
+    <Color x:Key="Warning">#FFD24A</Color>
+    <Color x:Key="WarningHover">#FFE28A</Color>
+    <Color x:Key="Danger">#FF375F</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#A3FF12" Offset="0"/>
+        <GradientStop Color="#00E676" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
