--- a/Resources/Themes/VaporwaveTheme.xaml
+++ b/Resources/Themes/VaporwaveTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- 80s Vaporwave Theme -->
+    <Color x:Key="PrimaryDark">#0F0A21</Color>
+    <Color x:Key="SecondaryDark">#1A1238</Color>
+    <Color x:Key="CardBackground">#09051A</Color>
+    <Color x:Key="CardHover">#150C2D</Color>
+    <Color x:Key="Accent">#FF4AD9</Color>
+    <Color x:Key="AccentHover">#FF70E6</Color>
+    <Color x:Key="TextPrimary">#00F2FF</Color>
+    <Color x:Key="TextSecondary">#E35BFF</Color>
+    <Color x:Key="BorderColor">#381F66</Color>
+    <Color x:Key="Success">#00FF85</Color>
+    <Color x:Key="SuccessHover">#5BFFB0</Color>
+    <Color x:Key="Warning">#FFF000</Color>
+    <Color x:Key="WarningHover">#FFF55C</Color>
+    <Color x:Key="Danger">#FF0073</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#FF4AD9" Offset="0"/>
+        <GradientStop Color="#00F2FF" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
