--- a/Resources/Themes/VioletTheme.xaml
+++ b/Resources/Themes/VioletTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Violet Theme -->
+    <Color x:Key="PrimaryDark">#0E0B1D</Color>
+    <Color x:Key="SecondaryDark">#191233</Color>
+    <Color x:Key="CardBackground">#090615</Color>
+    <Color x:Key="CardHover">#140E2A</Color>
+    <Color x:Key="Accent">#7C4DFF</Color>
+    <Color x:Key="AccentHover">#9A76FF</Color>
+    <Color x:Key="TextPrimary">#F2EDFF</Color>
+    <Color x:Key="TextSecondary">#B8A9E6</Color>
+    <Color x:Key="BorderColor">#3B2D6A</Color>
+    <Color x:Key="Success">#00C853</Color>
+    <Color x:Key="SuccessHover">#2EE47A</Color>
+    <Color x:Key="Warning">#FFCA28</Color>
+    <Color x:Key="WarningHover">#FFD54F</Color>
+    <Color x:Key="Danger">#FF1744</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#7C4DFF" Offset="0"/>
+        <GradientStop Color="#512DA8" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
