--- a/Resources/Themes/VolcanicAshTheme.xaml
+++ b/Resources/Themes/VolcanicAshTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Volcanic Ash Theme -->
+    <Color x:Key="PrimaryDark">#1A1A1A</Color>
+    <Color x:Key="SecondaryDark">#2C2C2C</Color>
+    <Color x:Key="CardBackground">#101010</Color>
+    <Color x:Key="CardHover">#212121</Color>
+    <Color x:Key="Accent">#FF4A1C</Color>
+    <Color x:Key="AccentHover">#FF6F47</Color>
+    <Color x:Key="TextPrimary">#EAEAEA</Color>
+    <Color x:Key="TextSecondary">#B8B8B8</Color>
+    <Color x:Key="BorderColor">#4F2A1D</Color>
+    <Color x:Key="Success">#A3FF12</Color>
+    <Color x:Key="SuccessHover">#B6FF47</Color>
+    <Color x:Key="Warning">#FFD300</Color>
+    <Color x:Key="WarningHover">#FFDF3B</Color>
+    <Color x:Key="Danger">#E53935</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#FF4A1C" Offset="0"/>
+        <GradientStop Color="#FF9A00" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
