--- a/Resources/Themes/ZenGardenTheme.xaml
+++ b/Resources/Themes/ZenGardenTheme.xaml
@@ -1,21 +1,21 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- Forest Theme -->
-    <Color x:Key="PrimaryDark">#0f1a0f</Color>
-    <Color x:Key="SecondaryDark">#1f3a1f</Color>
-    <Color x:Key="CardBackground">#081208</Color>
-    <Color x:Key="CardHover">#152315</Color>
-    <Color x:Key="Accent">#66bb6a</Color>
-    <Color x:Key="AccentHover">#4caf50</Color>
-    <Color x:Key="TextPrimary">#e8f5e9</Color>
-    <Color x:Key="TextSecondary">#a5d6a7</Color>
-    <Color x:Key="BorderColor">#2f5a2f</Color>
-    <Color x:Key="Success">#81c784</Color>
-    <Color x:Key="SuccessHover">#a5d6a7</Color>
-    <Color x:Key="Warning">#ffb74d</Color>
-    <Color x:Key="WarningHover">#ffcc80</Color>
-    <Color x:Key="Danger">#e57373</Color>
+    <!-- Zen Garden Theme -->
+    <Color x:Key="PrimaryDark">#F0F2EB</Color>
+    <Color x:Key="SecondaryDark">#E4E8D8</Color>
+    <Color x:Key="CardBackground">#FFFFFF</Color>
+    <Color x:Key="CardHover">#F8F9F2</Color>
+    <Color x:Key="Accent">#E58C9D</Color>
+    <Color x:Key="AccentHover">#EFADB9</Color>
+    <Color x:Key="TextPrimary">#3E362D</Color>
+    <Color x:Key="TextSecondary">#7A6B5B</Color>
+    <Color x:Key="BorderColor">#CAD1B8</Color>
+    <Color x:Key="Success">#77A87A</Color>
+    <Color x:Key="SuccessHover">#8FBFA1</Color>
+    <Color x:Key="Warning">#F0A27B</Color>
+    <Color x:Key="WarningHover">#F5B89A</Color>
+    <Color x:Key="Danger">#D96B6B</Color>
 
     <!-- Solid Color Brushes -->
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource PrimaryDark}"/>
@@ -35,8 +35,8 @@
 
     <!-- Gradient Brushes -->
     <LinearGradientBrush x:Key="AccentGradientBrush" StartPoint="0,0" EndPoint="1,1">
-        <GradientStop Color="#66bb6a" Offset="0"/>
-        <GradientStop Color="#388e3c" Offset="1"/>
+        <GradientStop Color="#E58C9D" Offset="0"/>
+        <GradientStop Color="#D9A87B" Offset="1"/>
     </LinearGradientBrush>
 
 </ResourceDictionary>
